remove max width on overview

--- a/webservice/templates/campaign_overview.html
+++ b/webservice/templates/campaign_overview.html
@@ -33,7 +33,7 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 
 {%block content %}
 <div class="ui horizontal segments" >
-	<div class="ui segment raised"  style="max-width:50%;">
+	<div class="ui segment raised">
 		<h3>Campaign Overview</h3>
 		<br/>
 		<hrule>
