Added UUID to split type definitions

--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -451,7 +451,8 @@ $('#campaign_add_edit_form')
       ae_dataset :                'empty',
       ae_split_type :             'empty',
       ae_launch_id :              'empty',
-      ae_campaign_definition_id : 'empty'
+      ae_campaign_definition_id : 'empty',
+      ae_cronjon:                 'empty',
     }
   }) ;
 }
