added oidc flow for all users to get tokens directly on poms

--- a/webservice/templates/campaign_overview.html
+++ b/webservice/templates/campaign_overview.html
@@ -89,6 +89,11 @@ Campaign: <a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{session
 					<i class="list icon"></i> INI file
 				</a>
 			</div>
+			<div class="item">
+				<a href="{{pomspath}}/auth/{{session_experiment}}/{{session_role}}" target='_blank'>
+					<i class="list icon"></i> auth
+				</a>
+			</div>
 		</div>
 	</div>
 	<div class="ui segment raised">
