--- a/webservice/templates/file_uploads.html
+++ b/webservice/templates/file_uploads.html
@@ -52,11 +52,13 @@ Uploaded Files
     <input type=hidden name="username" value="{{username}}">
     Filename: <input type="file" name="filename" multiple />
             <input type="submit" value="Upload" />
+  <!-- hide for now
     <div class="item" style="display: inline-block; padding-left: 20px;">
       <a href="{{pomspath}}/auth/{{session_experiment}}/{{session_role}}" title="You can optionally use this feature to fetch or renew a vault token for this experiment, bypassing the need to upload." target='_blank'>
         <i class="list icon"></i> Acquire Vault Token 
       </a>
     </div>
+  -->
   </form>
   {% endif %}
  
