--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -161,13 +161,15 @@ all the time...
     <div class="ui segment raised">
          <h3>Actions</h3>
          <div class=menu>
-               {%if session_role == "analysis"%}
+            <!-- hide for now
+              {%if session_role == "analysis"%}
                 <div class="item">
                   <a href="{{pomspath}}/auth/{{session_experiment}}/{{session_role}}" title="A vault token is required for analysis users. These tokens can be uploaded in 'User Data -> Uploaded Files', or by clicking this link." target='_blank'>
                     <i class="list icon"></i> Acquire Vault Token 
                   </a>
                 </div>
               {%endif%}
+            -->
               <div class=item>
                 <a href="{{pomspath}}/campaign_stage_edit/{{session_experiment}}/{{session_role}}?jump_to_campaign={{CampaignStage.campaign_stage_id}}" {{"disabled" if (session_role=="analysis"
                          and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj or session_role=="production-shifter"}}>
