Fixes Recent launch outputs url on schedule_launch page

--- a/webservice/templates/schedule_launch.html
+++ b/webservice/templates/schedule_launch.html
@@ -56,7 +56,7 @@ POMS:Campaign Stage {{cs.name}} Scheduled Launches
    <ul>
    {%for f in launch_flist%}
       <li>
-      <a href="list_launch_file?campaign_stage_id={{campaign_stage_id}}&fname={{f}}">{{f}}</a>
+        <a href="{{pomspath}}/list_launch_file?campaign_stage_id={{campaign_stage_id}}&fname={{f}}">{{f}}</a>
    {%endfor%}
    </ul>
 {%endblock%}
