Properly utilize role in submission

--- a/webservice/templates/auth.html
+++ b/webservice/templates/auth.html
@@ -17,7 +17,7 @@
 <div>
     <h2>
         {% if failed_check != "" %}
-        Analysis users require an uploaded vault token, and proxy file to submit a job.<br/>
+        Analysis jobs require an uploaded vault token, and proxy file to submit.<br/>
         {% else %}
         Your have a valid vault token and proxy. <br/>
         Please stand by to be redirected, or click <a href="{{redir}}">here.</a>
